--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,7 +25,10 @@ buildscript {
         classpath("de.undercouch:gradle-download-task:5.0.1")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.3.13'
     }
+
+    
 }
 
 allprojects {
